force-app/main/default/objects/Doctor__c/fields/availability__c.field-meta.xml
<CustomField>
    <fullName>availability__c</fullName>
    <label>availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>On-Leave</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>