force-app/main/default/objects/Doctor__c/fields/consultationfee__c.field-meta.xml
<CustomField>
    <fullName>consultationfee__c</fullName>
    <label>consultationfee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>