force-app/main/default/objects/Doctor__c/fields/doctorid__c.field-meta.xml
<CustomField>
    <fullName>doctorid__c</fullName>
    <displayFormat>ABC-{0000}</displayFormat>
    <label>doctorid</label>
    <type>AutoNumber</type>
</CustomField>