force-app/main/default/objects/Doctor__c/fields/doctorname__c.field-meta.xml
<CustomField>
    <fullName>doctorname__c</fullName>
    <label>doctorname</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>