force-app/main/default/objects/Doctor__c/fields/experience__c.field-meta.xml
<CustomField>
    <fullName>experience__c</fullName>
    <label>experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>