force-app/main/default/objects/Doctor__c/fields/specialization__c.field-meta.xml
<CustomField>
    <fullName>specialization__c</fullName>
    <label>specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Medicine</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Gynecology</fullName>
            </value>
            <value>
                <fullName>Ophthamology</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>Psychiatry</fullName>
            </value>
            <value>
                <fullName>Dentistry</fullName>
            </value>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Radiology</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>